# dependabot-org-config

./: .gitignore  Cargo.toml  README.md  overrides-sample.toml
.github/workflows/: cargo-clippy.yml
src/: dependabot.rs  github.rs  main.rs
