[package]
name = "dependabot-org-config"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
argh = "0.1"
serde = "1"
serde_yml = "0.0.12"


log = "0.4"
indicatif = "0.18"
octocrab ="0.48"
toml = "0.9"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
http-body-util = "0.1.3"
chrono = "0.4.42"
env_logger = "0.11"
async-trait = "0.1.89"
http-body = "1.0.1"
bytes = "1.11.0"
http = "1.4.0"