[package]
name = "dependabot-org-config"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
argh = "0.1"
serde = "1"
serde_yaml_ng = "0.10"


log = "0.4"
indicatif = "0.18"
octocrab ="0.48"
toml = { version = "0.9", features = ["preserve_order"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
env_logger = "0.11"